src/test/deca/context/valid/created/avec_objet/rule3.29/3.29.deca
// Test pour la règle 3.29
// Date: 18/01/2024
// Auteur: Jerome

class ClasseCondition {
    boolean verifierCondition(int valeur) {
        return valeur > 0;  // Expression retournant un booléen
    }

    void methodeAvecCondition() {
        int valeurTest = 5;
        if (this.verifierCondition(valeurTest)) {
            println("Condition vraie");
        } else {
            println("Condition fausse");
        }
    }
}

class Test {
    void executionTest() {
        ClasseCondition obj = new ClasseCondition();
        obj.methodeAvecCondition();
    }
}

// Programme principal
{
    Test testProgramme = new Test();
    testProgramme.executionTest();
}
